--- a/demo/demo.css
+++ b/demo/demo.css
@@ -18,7 +18,13 @@ body {
     min-height: 100vh;   
 }
 
-.left, .center, .right {
+.left {
+    width: 200px;
+    flex 0 0 auto;
+    text-align: center;
+}
+
+.center, .right {
     text-align: center;
     flex: 1;
 }
@@ -75,4 +81,24 @@ body {
 
 .right { 
     background-color: lightblue; 
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    margin: 5px 0;
+    text-align: center;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+li:hover {
+    background-color: #66bb6a;
 }
