--- a/demo/demo.css
+++ b/demo/demo.css
@@ -88,7 +88,10 @@ ul {
     padding: 0;
 }
 
-li {
+.labelListItem {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: #4CAF50;
     color: white;
     padding: 10px 20px;
@@ -99,6 +102,6 @@ li {
     transition: background-color 0.3s;
 }
 
-li:hover {
+.labelListItem:hover {
     background-color: #66bb6a;
 }
