--- a/demo/demo.css
+++ b/demo/demo.css
@@ -69,6 +69,10 @@ body {
     padding: 20px;
 }
 
+.aboutGraphletJS {
+    background-color: lightcoral;
+}
+
 .randomToken {
     background-color: lightgreen;
     margin: 0;
@@ -106,14 +110,47 @@ ul {
     background-color: #66bb6a;
 }
 
-.node-field {
-    margin-bottom: 10px;
+#whichNode {
+    margin: 20px auto;  
+    width: 400px;
+    border: 2px solid darkblue;
+    border-radius: 10px;
+    padding: 0;
+}
+#whichNode h4 {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    padding: 10px 0;
+    color: white;
+    background-color: darkblue;
+    border-radius: 10px 10px 0 0;
 }
 
+.node-field {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    padding: 5px 10px;
+
 .node-label {
+    flex-basis: 25%;
+    text-align: left;
+    flex-grow: 1; 
+    margin-right: 10px; 
     font-weight: bold;
+}
 }
 
 .node-value {
-    /* Additional styling for the value */
+    flex-basis: 60%;
+    text-align: left;
 }
+
+.node-divider {
+    border: 0;
+    height: 2px;
+    background-color: darkblue;
+    margin: 0; 
+}
+
