--- a/demo/demo.css
+++ b/demo/demo.css
@@ -110,14 +110,16 @@ ul {
     background-color: #66bb6a;
 }
 
-#whichNode {
+#whichNode,
+.createNode {
     margin: 20px auto;  
     width: 400px;
     border: 2px solid darkblue;
     border-radius: 10px;
     padding: 0;
 }
-#whichNode h4 {
+#whichNode h4,
+.createNode h4 {
     width: 100%;
     text-align: center;
     margin: 0;
@@ -189,21 +191,21 @@ ul {
     display: none;
     position: fixed;
     z-index: 999;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
+    left: 400px;
+    top: 200px;
+    width: 500px;
+    height: 600px;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-    display: flex;
     justify-content: center;
     align-items: center;
+    border: 5px solid yellow;
+    background-color: blue;
 }
 
 .createNodeModalContent {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
-    border: 1px solid #888;
+    border: 1px solid white;
     width: 80%;
 }
